--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ a, a:hover, a:link, a:visited, a:active {color:#bd0000;}
 .text-example{color:slategray; font-style: italic;}
 .text-green{color:limegreen;}
 .text-yellow{color:#FEF9E7;}
+.text-red{color:#dc3545;}
 .display-6{font-size:18px;color:#FEF9E7;padding: .5rem 1.0rem;}
 
 
